# yoda-web

./: .dockerignore  .gitignore  Containerfile  dune-project  readme.md  yoda-web.opam
.devcontainer/: devcontainer.json
.github/workflows/: build-container-image.yml  build-static-package.yml
nginx/: default.conf
src/: api.ml  dune  helpers.ml  main.ml
src/components/: codebar.ml  contest_list.ml  dune  editor.ml  login_form.ml  problem_list.ml  scoreboard.ml  sidebar.ml  submission_form.ml  tabbar.ml  testbar.ml  user_list.ml  view_contest_progress.ml  view_problem.ml  view_problems.ml  view_submissions.ml  view_summary.ml
src/model/: dune  tests.ml
src/pages/: codeboard.ml  contests.ml  dashboard.ml  dune  login.ml  problems.ml  scoreboard.ml  submissions.ml  users.ml
static/: index.html  style.css
